Fix code with SonarLint